# opie

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  bootstrap.sh  install.command  install.sh  pyproject.toml  uninstall.command  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: OSC_REFERENCE.md
opie/: __init__.py  __main__.py  config.py  gui.py  osclib.py  panel.py  parser.py  relay.py  service.py  sniffer.py  update.py
opie/resources/: Opie.icns  OpieApp.swift  com.opie.relay.plist.tmpl  config.example.json
packaging/: README.md  build_all.sh  build_app.sh  build_dmg.sh  build_pkg.sh
packaging/app/: Info.plist.in  launcher
relay/: com.etcvoice.relay.plist  config.example.json  osc_sniffer.py  relay.py
shortcuts/: SHORTCUT_SETUP.md
tests/: test_parser.py
tools/: make_icon.py
